--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -23,7 +23,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+     É necessário Javascript para exibir esta página! 
     </noscript>
     <div id="root"></div>
     <!--
